--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,5 @@
-.App {
-  text-align: center;
-  color: white;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+body, html, #root {
+  height: 100%;
 }
 
 img {
@@ -33,10 +7,18 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  height:auto;
+  height: 100%;
   min-height: 100%;
   min-width: 1024px;
   z-index: -1;
+}
+
+.background {
+  height: 100%;
+}
+
+.input-field {
+  width: 100%;
 }
 
 .MuiSvgIcon-root-1 {
@@ -49,4 +31,29 @@ img {
 
 .night {
   background: black;
+}
+
+h1 {
+  margin: 0;
+}
+
+@media screen and (min-width: 601px) {
+  h1 {
+    font-size: 3.5vw;
+  }
+  div {
+    font-size: 1.5vw;
+  }
+}
+
+@media screen and (max-width: 601px) {
+  h1 {
+    font-size: 5.6vw;
+  }
+  div {
+    font-size: 3.8vw;
+  }
+  .MuiSvgIcon-root-1 {
+    height: 0.8em !important;
+  }
 }
