--- a/src/App.css
+++ b/src/App.css
@@ -33,27 +33,85 @@ img {
   background: black;
 }
 
+.extraMargin {
+  margin: 5%;
+}
+
 h1 {
   margin: 0;
+  font-size: 3.5vw;
 }
 
-@media screen and (min-width: 601px) {
+div {
+  font-size: 1.3vw;
+}
+
+textarea {
+  width: 100%;
+  font-size: 1.7vw !important;
+}
+
+iframe {
+  width: 26vw;
+  height: 13vw;
+  margin: 3%;;
+}
+
+.flexRow {
+  width: 100%;
+  display: flex;
+  flexDirection: row;
+  align-items: center;
+  justifyContent: space-around;
+}
+
+@media screen and (max-width: 900px){
+  iframe {
+    width: 30vw;
+    height: 18vw;
+  }
   h1 {
-    font-size: 3.5vw;
+    font-size: 4.8vw;
   }
   div {
-    font-size: 1.5vw;
+    font-size: 2vw;
+  }
+  textarea {
+    width: 100%;
+    font-size: 2vw !important;
+  }
+  .MuiSvgIcon-root-1 {
+    height: 0.8em !important;
+  }
+  .day, .night{
+    width: 70% !important;
   }
 }
 
-@media screen and (max-width: 601px) {
+@media screen and (max-width: 570px){
+  .flexRow {
+    display: flex;
+    flex-direction: column;
+    justifyContent: space-between;
+  }
+  iframe {
+    width: 35vw;
+    height: 20vw;
+  }
   h1 {
     font-size: 5.6vw;
   }
   div {
-    font-size: 3.8vw;
+    font-size: 3.4vw;
+  }
+  textarea {
+    width: 100%;
+    font-size: 3.4vw !important;
   }
   .MuiSvgIcon-root-1 {
     height: 0.8em !important;
+  }
+  .day, .night{
+    height: 70% !important;
   }
 }
